objects/vlocity_cmt__GenericDocument__c.object
<CustomObject>
    <description>Provides information about the documents attached in a DocuSign eSignature envelope.</description>
    <fields>
        <fullName>vlocity_cmt__DocumentIdentifier__c</fullName>
        <description>A document identifier within a DocuSign envelope.</description>
        <label>Document Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentName__c</fullName>
        <description>Name of a document within a DocuSign envelope.</description>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentSourceId__c</fullName>
        <description>SObject Id where the document was sourced.</description>
        <label>Document Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentSourceType__c</fullName>
        <description>SObject where the document was sourced.</description>
        <label>Document Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EnvelopeId__c</fullName>
        <description>Generic Envelope</description>
        <label>Generic Envelope</label>
        <referenceTo>vlocity_cmt__GenericEnvelope__c</referenceTo>
        <relationshipLabel>Generic Documents</relationshipLabel>
        <relationshipName>GenericDocuments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EnvelopeIdentifier__c</fullName>
        <description>Envelope Identifier</description>
        <formula>vlocity_cmt__EnvelopeId__r.vlocity_cmt__EnvelopeIdentifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Envelope Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FileExtension__c</fullName>
        <description>File extension of the document that was sourced.</description>
        <label>File Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Generic DocuSign Document</label>
    <nameField>
        <displayFormat>DOC_{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Generic DocuSign Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>